# Generate-Beamer-Presentation

./: .gitignore  Elements.py  Fileendings.py  Main.py  README.md  TeXGenerator.py  preamble.tex  pyproject.toml  template.tex
TopFolder/: README.md
