[tool.poetry]
name = "generate-beamer-presentation"
version = "0.1.0"
description = ""
authors = ["Leonhard Schraut <spammailspam@aol.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
